samples/_failures_safe/1761519008_d32ea7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da26153f.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_da26153f.c:133:13: error: expected expression at end of input
  133 |             printf("%s: %s\n", analyzer->entries[i].timestamp,
      |             ^~~~~~
./samples/SAFE/__tmp_da26153f.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da26153f.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da26153f.c:133:13: error: expected declaration or statement at end of input
